@@ -1,3 +1,11 @@
+2017-12-27  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+	* Frameworks/StepTalk/STConversation.m (knownLanguages,
+	interpretScript:):
+	* Frameworks/StepTalk/STRemoteConversation.m (interpretScript:):
+	* Frameworks/StepTalk/STUndefinedObject.m (release):
+	Fix inconsistent distributed object modifiers reported by clang.
+
 2015-10-23  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
 	* Frameworks/StepTalk/STObjCRuntime.m (selector_types): Fix broken
